<?xml version="1.0" encoding="utf-8"?>
<!--
Programmer: Luis Perez
Class ID: lperez9518
Lab2: Loop Coding Center (LCC)
CIS 2610: Business Mobile Programming
Spring 2017
Due date: 02/28/17
Date completed: 02/28/17
*************************************
* Program Explanation
*
* In this program I used four TextView widgets to give instructions to the user.
*Four radio buttons for user to select only one. One textField number for user to enter numbers.
*one imageView.
************************************
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.wmich.lab2lperez9518.MainActivity">
    <!--TextView widget with no empty text that way the the java SetText will show the result -->
    <TextView
        android:text="@string/TxtViewResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewResults"
        android:layout_above="@+id/buttonSubmit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="#ff0000" />
    <!--The Button widget for user to click to submit the information-->
    <Button
        android:text="@string/BtnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSubmit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <!--TextView with message information-->
    <TextView
        android:text="@string/TxtViewOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewOptions"
        android:textSize="18sp"
        android:textColor="#05dbfc"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/editTextStudents"
        android:layout_centerHorizontal="true" />
    <!--Another TextView to display text to the user-->
    <TextView
        android:text="@string/txtViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewInfo"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp" />
    <!--A group of 4 radio buttons, user only allow to select one -->
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextViewOptions"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroupMember">
        <!--Fist radio button with telling the price of one package-->
        <RadioButton
            android:text="@string/RatButtonBeginner"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonBeginner"
            android:checked="true" />
        <!--Second radio button-->
        <RadioButton
            android:text="@string/RatButtonBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonBasic" />
        <!--Third radio button-->
        <RadioButton
            android:text="@string/RatButtonAdvance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonAdvance" />
        <!--Fourth radio button-->
        <RadioButton
            android:text="@string/RatButtonPremium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonPremium" />

    </RadioGroup>
    <!--Text field for edit text will allow the program to only accept number inputs-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextStudents"
        android:hint="@string/editTxtStudents"
        android:textAlignment="center"
        android:layout_below="@+id/textViewInfo"
        android:layout_centerHorizontal="true" />
    <!--textview widget -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewTitle"
        android:textAlignment="center"
        android:id="@+id/TextViewTitle"
        android:textSize="24sp"
        android:textColor="#3a4feb"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <!--Image view widget for illustration and user engagement-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/kids_code"
        android:id="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroupMember"
        android:layout_above="@+id/textViewResults" />

</RelativeLayout>
